--- a/News(oc)/News(oc)/PictureTableViewCell.xib
+++ b/News(oc)/News(oc)/PictureTableViewCell.xib
@@ -32,7 +32,7 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="PAz-nU-J8b"/>
                         </constraints>
-                        <color key="currentPageIndicatorTintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <color key="currentPageIndicatorTintColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                     </pageControl>
                 </subviews>
                 <constraints>
